Bug 1324809 - Part 1. Fix wrong clip region while painting filter. r=mstange

MozReview-Commit-ID: Cqjo7VwtnlK